--- a/BootStrap Pos System/customerform.html
+++ b/BootStrap Pos System/customerform.html
@@ -80,17 +80,17 @@
           </div>
 
           <div class="mb-3">
-              <label class="form-label" for="txtCusID">Customer Name</label>
+              <label class="form-label" for="txtName">Customer Name</label>
               <input class="form-control" id="txtName" placeholder="Customer Name" type="text">
           </div>
 
           <div class="mb-3">
-              <label class="form-label" for="txtCusID">Customer Address</label>
+              <label class="form-label" for="txtAddress">Customer Address</label>
               <input class="form-control" id="txtAddress" placeholder="Customer Address" type="text">
           </div>
 
           <div class="mb-3">
-              <label class="form-label" for="txtCusID">Customer Contact</label>
+              <label class="form-label" for="txtContact">Customer Contact</label>
               <input class="form-control" id="txtContact" placeholder="Customer Contact" type="text">
           </div>
        </div>
