--- a/index.html
+++ b/index.html
@@ -559,6 +559,18 @@
             height: 159px;
             opacity: unset;
         }
+        body > main > #SixthContent > #SixthContentButtonOne{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-114px;
+            left: -587px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentButtonOne > button{
+            background-color: #16a085;
+            border-color: #16a085;
+        }
         body > main > #SixthContent > #SixthContentDivTwo{
             height: 100px;
             width: 100px;
@@ -570,6 +582,18 @@
         body > main > #SixthContent > #SixthContentDivTwo > img{
             height: 159px;
             opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentButtonTwo{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-205px;
+            left: -197px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentButtonTwo > button{
+            background-color: #16a085;
+            border-color: #16a085;
         }
         body > main > #SixthContent > #SixthContentDivThree{
             height: 100px;
@@ -583,6 +607,14 @@
             height: 159px;
             opacity: unset;
         }
+        body > main > #SixthContent > #SixthContentButtonThree{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-304px;
+            left: 156px;
+            position: relative;
+        }
         body > main > #SixthContent > #SixthContentDivFour {
             height: 100px;
             width: 100px;
@@ -595,6 +627,16 @@
             height: 159px;
             opacity: unset;
         }
+
+        body > main > #SixthContent > #SixthContentButtonFour{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-409px;
+            left: 551px;
+            position: relative;
+        }
+
         body > main > #SixthContent > #SixthContentDivFive{
             height: 100px;
             width: 100px;
@@ -607,6 +649,14 @@
             height: 176px;
             opacity: unset;
         }
+        body > main > #SixthContent > #SixthContentButtonFive{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-300px;
+            left: -582px;
+            position: relative;
+        }
         body > main > #SixthContent > #SixthContentDivSix{
             height: 100px;
             width: 100px;
@@ -618,6 +668,14 @@
         body > main > #SixthContent > #SixthContentDivSix > img{
             height: 176px;
             opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentButtonSix{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-398px;
+            left: -118px;
+            position: relative;
         }
         body > main > #SixthContent > #SixthContentDivSeven{
             height: 100px;
@@ -632,6 +690,15 @@
             opacity: unset;
         }
 
+        body > main > #SixthContent > #SixthContentButtonSeven{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-501px;
+            left: 340px;
+            position: relative;
+        }
+
         body > main > #SixthContent > #SixthContentDivEight{
             height: 100px;
             width: 100px;
@@ -643,6 +710,15 @@
         body > main > #SixthContent > #SixthContentDivEight > img{
             height: 176px;
             opacity: unset;
+        }
+
+        body > main > #SixthContent > #SixthContentButtonEight{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-397px;
+            left: -581px;
+            position: relative;
         }
 
         body > main > #SixthContent > #SixthContentShortDivOne{
@@ -1030,28 +1106,54 @@
               <div id="SixthContentDivOne">
                   <img src="assets/images/case1.PNG" alt="Error Loading Image">
               </div>
+              <div id="SixthContentButtonOne">
+                  <button>View Project</button>
+              </div>
+
               <div id="SixthContentDivTwo">
                   <img src="assets/images/case2.PNG" alt="Error Loading Image">
               </div>
+              <div id="SixthContentButtonTwo">
+                  <button>View Project</button>
+              </div>
+
               <div id="SixthContentDivThree">
                   <img src="assets/images/case3.PNG" alt="Error Loading Image">
               </div>
+              <div id="SixthContentButtonThree">
+                  <button>View Project</button>
+              </div>
 
-             <div id="SixthContentDivFour">
+              <div id="SixthContentDivFour">
                   <img src="assets/images/case4.PNG" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentButtonFour">
+                  <button>View Project</button>
               </div>
 
               <div id="SixthContentDivFive">
                   <img src="assets/images/Transcetioncase1.PNG" alt="Error Loading Image">
               </div>
+              <div id="SixthContentButtonFive">
+                  <button>View Project</button>
+              </div>
                <div id="SixthContentDivSix">
                   <img src="assets/images/Transcetioncase2.PNG" alt="Error Loading Image">
-              </div>
+               </div>
+                 <div id="SixthContentButtonSix">
+                  <button>View Project</button>
+                 </div>
               <div id="SixthContentDivSeven">
                   <img src="assets/images/Animationcase1.PNG" alt="Error Loading Image">
               </div>
+               <div id="SixthContentButtonSeven">
+                <button>View Project</button>
+                </div>
               <div id="SixthContentDivEight">
                   <img src="assets/images/animationcase3.PNG" alt="Error Loading Image">
+              </div>
+              <div id="SixthContentButtonEight">
+                <button>View Project</button>
               </div>
 
                <div id="SixthContentShortDivOne">
