--- a/BootStrap Pos System/customerform.html
+++ b/BootStrap Pos System/customerform.html
@@ -54,8 +54,10 @@
         <h1 class="text-secondary">Customer Form</h1>
       <div class="mb-3">
         <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search Customer" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search Customer</button>
+            <label class="form-label" for="txtSearchCusID">Search Customer</label>
+            <input class="form-control" id="txtSearchCusID" placeholder="Customer ID,NIC,Name" type="text">
+            <!--<input class="form-control me-2" type="search" placeholder="Search Customer" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search Customer</button> -->
         </form>
        </div>
         <div class="mb-3">
@@ -72,26 +74,30 @@
 
       <div class="col-12 col-md-5">
           <button class="btn btn-danger" id="btnSaveCustomer">Add New Customer Details</button>
-          <button class="btn btn-success">View Customer Details</button>
+          <button class="btn btn-success" id="btnSearch">Search Customer</button>
        <div>
           <div class="mb-3">
               <label class="form-label" for="txtCusID">Customer ID</label>
               <input class="form-control" id="txtCusID" placeholder="Customer ID" type="text">
+              <p><small class="text-danger pl-1" id="lblcusid"></small></p>
           </div>
 
           <div class="mb-3">
               <label class="form-label" for="txtName">Customer Name</label>
               <input class="form-control" id="txtName" placeholder="Customer Name" type="text">
+              <p><small class="text-danger pl-1" id="lblcusname"></small></p>
           </div>
 
           <div class="mb-3">
               <label class="form-label" for="txtAddress">Customer Address</label>
               <input class="form-control" id="txtAddress" placeholder="Customer Address" type="text">
+              <p><small class="text-danger pl-1" id="lblcusaddress"></small></p>
           </div>
 
           <div class="mb-3">
               <label class="form-label" for="txtContact">Customer Contact</label>
               <input class="form-control" id="txtContact" placeholder="Customer Contact" type="text">
+              <p><small class="text-danger pl-1" id="lblcuscontact"></small></p>
           </div>
        </div>
       </div>
