--- a/BootStrap Pos System/itemform.html
+++ b/BootStrap Pos System/itemform.html
@@ -54,8 +54,8 @@
             <h1 class="text-secondary">View Item Form</h1>
             <div class="mb-3">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search Customer" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search Items</button>
+                    <label class="form-label" for="txtSearchItemID">Search Customer</label>
+                    <input class="form-control" id="txtSearchItemID" placeholder="Customer ID, NIC, Name" type="text">
                 </form>
             </div>
 
@@ -73,26 +73,30 @@
 
         <div class="col-12 col-md-5">
             <button class="btn btn-danger" id="btnSaveItem">Add New Item Details</button>
-            <button class="btn btn-success">View Items </button>
+            <button class="btn btn-success"id="btnSearchItem">Search Items </button>
 
             <div class="mb-3">
                 <label class="form-label" for="txtItemID">Item ID</label>
                 <input class="form-control" id="txtItemID" placeholder="Item ID" type="text">
+                <p><small class="text-danger pl-1" id="lblItemId"></small></p>
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="txtItemName">Item Type</label>
                 <input class="form-control" id="txtItemName" placeholder="Item Type" type="text">
+                <p><small class="text-danger pl-1" id="lblItemType"></small></p>
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="txtInStock">In Stock</label>
                 <input class="form-control" id="txtInStock" placeholder="In Stock" type="text">
+                <p><small class="text-danger pl-1" id="lblItemStock"></small></p>
             </div>
 
             <div class="mb-3">
                 <label class="form-label" for="txtItemSalary">Item Price</label>
                 <input class="form-control" id="txtItemSalary" placeholder="Item Salary" type="text">
+                <p><small class="text-danger pl-1" id="lblItemSalary"></small></p>
             </div>
 
         </div>
