Update SPA BOOTSTRAP

--- a/BOOTSTRAP SPA SYSTEM/bindex.html
+++ b/BOOTSTRAP SPA SYSTEM/bindex.html
@@ -269,32 +269,29 @@
                             <h3>Invoice Details</h3>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Order ID :</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+                            <label for="ORDERID" class="form-label">Order ID :</label>
+                            <textarea class="form-control" id="ORDERID" rows="1"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Customer :</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea2" rows="1"></textarea>
+                            <label for="CUSTOMERID" class="form-label">Customer ID:</label>
+                            <textarea class="form-control" id="CUSTOMERID" rows="1"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Name :</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea3" rows="1"></textarea>
+                            <label for="CUSTOMERNAME" class="form-label">Name :</label>
+                            <textarea class="form-control" id="CUSTOMERNAME" rows="1"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Email Address :</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            <label for="EMAILADDRESS" class="form-label">Email Address :</label>
+                            <input type="email" class="form-control" id="EMAILADDRESS" placeholder="name@example.com">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Date :</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea4" rows="1"></textarea>
+                            <label for="DATE" class="form-label">Date :</label>
+                            <textarea class="form-control" id="DATE" rows="1"></textarea>
                         </div>
+
                         <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Customer ID :</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea5" rows="1"></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Salary :</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea6" rows="1"></textarea>
+                            <label for="CONTACT" class="form-label">Contact :</label>
+                            <textarea class="form-control" id="CONTACT" rows="1"></textarea>
                         </div>
                         <button type="button" class="btn btn-secondary">Add Order</button>
                     </div>
@@ -305,20 +302,20 @@
 
                         <div>
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Item ID :</label>
-                                <textarea class="form-control" id="example1" rows="1"></textarea>
+                                <label for="ITEMID" class="form-label">Item ID :</label>
+                                <textarea class="form-control" id="ITEMID" rows="1"></textarea>
                             </div>
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Item Name :</label>
-                                <textarea class="form-control" id="example2" rows="1"></textarea>
+                                <label for="ITEMNAME" class="form-label">Item Name :</label>
+                                <textarea class="form-control" id="ITEMNAME" rows="1"></textarea>
                             </div>
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Order Quantity :</label>
-                                <textarea class="form-control" id="example3" rows="1"></textarea>
+                                <label for="ORDERQUANTITY" class="form-label">Order Quantity :</label>
+                                <textarea class="form-control" id="ORDERQUANTITY" rows="1"></textarea>
                             </div>
                             <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Salary :</label>
-                                <textarea class="form-control" id="example4" rows="1"></textarea>
+                                <label for="ITEMSALARY" class="form-label">Salary :</label>
+                                <textarea class="form-control" id="ITEMSALARY" rows="1"></textarea>
                             </div>
 
                             <button type="button" class="btn btn-danger">Add Item</button>
