--- a/BOOTSTRAP SPA SYSTEM/bindex.html
+++ b/BOOTSTRAP SPA SYSTEM/bindex.html
@@ -154,8 +154,8 @@
                         <tr class="table-success">
                             <th scope="col">Id</th>
                             <th scope="col">Customer Name</th>
-                            <th scope="col">Age</th>
-                            <th scope="col">Salary</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Contact</th>
                         </tr>
                         </thead>
                         <tbody id="cusTable">
