--- a/BOOTSTRAP SPA SYSTEM/bindex.html
+++ b/BOOTSTRAP SPA SYSTEM/bindex.html
@@ -278,7 +278,7 @@
                         </div>
                         <div class="mb-3">
                             <label class="fw-bold" for="cmbSelectCustomerId">Customer ID :</label>
-                            <select aria-label="Default select example" class="form-select" id="cmbSelectCustomerId"></select>
+                            <select aria-label="Default select example" class="form-select " id="cmbSelectCustomerId"></select>
                         </div>
                         <div class="mb-3">
                             <label for="CUSTOMERNAME" class="form-label">Name :</label>
@@ -390,5 +390,7 @@
 <script src="controller/OrderController.js"></script>
 <script src="model/CustomerDTO.js"></script>
 <script src="model/ItemDTO.js"></script>
+<script src="model/OrderDTO.js"></script>
+<script src="model/OrderDetails.js"></script>
 </body>
 </html>
