--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
             height: 245px;
             opacity: unset;
         }
+        body > main > #ThirdContent > #ThirdContentDivOne:hover{
+            width: 110px;
+
+        }
         body > main > #ThirdContent > #ThirdContentDivTwo{
             height: 100px;
             width: 100px;
@@ -1107,54 +1111,58 @@
                   <img src="assets/images/case1.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentButtonOne">
-                  <button>View Project</button>
+                  <a href="My%20Assingements/case%201.html"><button>View Project</button></a>
+
               </div>
 
               <div id="SixthContentDivTwo">
                   <img src="assets/images/case2.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentButtonTwo">
-                  <button>View Project</button>
+                  <a href="My%20Assingements/case2.html"><button>View Project</button></a>
               </div>
 
               <div id="SixthContentDivThree">
                   <img src="assets/images/case3.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentButtonThree">
-                  <button>View Project</button>
+                  <a href="My%20Assingements/case%203.html"><button>View Project</button></a>
+
               </div>
 
               <div id="SixthContentDivFour">
                   <img src="assets/images/case4.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentButtonFour">
-                  <button>View Project</button>
+                  <a href="My%20Assingements/case%204.html"><button>View Project</button></a>
+
               </div>
 
               <div id="SixthContentDivFive">
                   <img src="assets/images/Transcetioncase1.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentButtonFive">
-                  <button>View Project</button>
+                  <a href="My%20Assingements/Transition%20Case%201.html"><button>View Project</button></a>
               </div>
                <div id="SixthContentDivSix">
                   <img src="assets/images/Transcetioncase2.PNG" alt="Error Loading Image">
                </div>
                  <div id="SixthContentButtonSix">
-                  <button>View Project</button>
+                     <a href="My%20Assingements/Transition%20Case%202.html"><button>View Project</button></a>
                  </div>
               <div id="SixthContentDivSeven">
                   <img src="assets/images/Animationcase1.PNG" alt="Error Loading Image">
               </div>
                <div id="SixthContentButtonSeven">
-                <button>View Project</button>
+                   <a href="My%20Assingements/Animation%20case%201.html"><button>View Project</button></a>
                 </div>
               <div id="SixthContentDivEight">
                   <img src="assets/images/animationcase3.PNG" alt="Error Loading Image">
               </div>
               <div id="SixthContentButtonEight">
-                <button>View Project</button>
+                  <a href="My%20Assingements/Animation%20case3.html"><button>View Project</button></a>
               </div>
+              
 
                <div id="SixthContentShortDivOne">
                   <img src="assets/images/java-logo.png" alt="Error Loading Image">
