--- a/index.html
+++ b/index.html
@@ -724,12 +724,32 @@
             left: -581px;
             position: relative;
         }
+        body > main > #SixthContent > #SixthContentDivNine{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-471px;
+            left: -262px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivNine > img {
+            height: 176px;
+            opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentButtonNine{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-497px;
+            left: -131px;
+            position: relative;
+        }
 
         body > main > #SixthContent > #SixthContentShortDivOne{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-269px;
+            top:-372px;
             left: -692px;
             position: relative;
 
@@ -743,7 +763,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-369px;
+            top:-473px;
             left: -548px;
             position: relative;
         }
@@ -756,7 +776,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-469px;
+            top:-573px;
             left: -343px;
             position: relative;
         }
@@ -769,7 +789,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-569px;
+            top:-664px;
             left: -257px;
             position: relative;
         }
@@ -782,7 +802,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-735px;
+            top:-815px;
             left:562px;
             position: relative;
 
@@ -1162,7 +1182,20 @@
               <div id="SixthContentButtonEight">
                   <a href="My%20Assingements/Animation%20case3.html"><button>View Project</button></a>
               </div>
-              
+
+              <div id="SixthContentDivNine">
+                  <img src="assets/images/BootStrap01.PNG" alt="Error Loading Image">
+              </div>
+
+              <div id="SixthContentButtonNine">
+                  <a href="BOOTSTRAP%20SPA%20SYSTEM/bindex.html"><button>View Project</button></a>
+              </div>
+
+
+              <!--<div id="SixthContentDivTen">
+
+              </div> -->
+
 
                <div id="SixthContentShortDivOne">
                   <img src="assets/images/java-logo.png" alt="Error Loading Image">
