--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
             height: 245px;
             opacity: unset;
         }
-        body > main > #ThirdContent > #ThirdContentDivOne:hover{
+        /*body > main > #ThirdContent > #ThirdContentDivOne:hover{
             width: 110px;
 
-        }
+        }*/
         body > main > #ThirdContent > #ThirdContentDivTwo{
             height: 100px;
             width: 100px;
@@ -744,12 +744,32 @@
             left: -131px;
             position: relative;
         }
+        body > main > #SixthContent > #SixthContentDivTen{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-571px;
+            left: 192px;
+            position: relative;
+        }
+        body > main > #SixthContent > #SixthContentDivTen > img {
+            height: 176px;
+            opacity: unset;
+        }
+        body > main > #SixthContent > #SixthContentButtonTen{
+            height:0;
+            width: 100px;
+            margin: auto;
+            top:-593px;
+            left: 353px;
+            position: relative;
+        }
 
         body > main > #SixthContent > #SixthContentShortDivOne{
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-372px;
+            top:-477px;
             left: -692px;
             position: relative;
 
@@ -763,7 +783,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-473px;
+            top:-576px;
             left: -548px;
             position: relative;
         }
@@ -776,7 +796,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-573px;
+            top:-671px;
             left: -343px;
             position: relative;
         }
@@ -789,7 +809,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-664px;
+            top:-772px;
             left: -257px;
             position: relative;
         }
@@ -802,7 +822,7 @@
             height: 100px;
             width: 100px;
             margin: auto;
-            top:-815px;
+            top:-885px;
             left:562px;
             position: relative;
 
@@ -1192,12 +1212,15 @@
               </div>
 
 
-              <!--<div id="SixthContentDivTen">
+              <div id="SixthContentDivTen">
+                  <img src="assets/images/NightRider.PNG" alt="Error Loading Image">
+              </div>
 
-              </div> -->
+              <div id="SixthContentButtonTen">
+                  <a href="JavaScript%20Assingements/nightrider.html"><button>View Project</button></a>
+              </div>
 
-
-               <div id="SixthContentShortDivOne">
+              <div id="SixthContentShortDivOne">
                   <img src="assets/images/java-logo.png" alt="Error Loading Image">
               </div>
               <div id="SixthContentShortDivTwo">
