--- a/JavaScript Assingements/firstJavaScript.html
+++ b/JavaScript Assingements/firstJavaScript.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>JS Que 1</title>
+    <link rel="stylesheet" href="assests/css/index.css">
 
 </head>
 <body>
-    <div><label id="six"></label></div>
+    
+     <div><label id="six"></label></div>
     <div><label id="five"></label></div>
     <div><label id="four"></label></div>
     <div><label id="three"></label></div>
     <div><label id="two"></label></div>
     <div><label id="one"></label></div>
 
-    <img src="assests/images/car.gif" alt="Error Loading Image">
-    <img src="assests/images/car.gif" alt="Error Loading Image">
-    <img src="assests/images/car.gif" alt="Error Loading Image">
-    <img src="assests/images/car.gif" alt="Error Loading Image">
-    <img src="assests/images/car.gif" alt="Error Loading Image">
-    <img src="assests/images/car.gif" alt="Error Loading Image">
-    <img id="park" src="assests/images/park.png" alt="">
+    <img src="assests/images/car.gif">
+    <img src="assests/images/car.gif">
+    <img src="assests/images/car.gif">
+    <img src="assests/images/car.gif">
+    <img src="assests/images/car.gif">
+    <img src="assests/images/car.gif">
+    <img id="park" src="assests/images/park.png">
 
     <script src="assests/JavaScript/jquery/jquery-3.6.0.min.js"></script>
     <script src ="assests/JavaScript/Script.js"></script>
