--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>My WEB IT SOLUTIONS</title>
     <link rel="icon" href="assets/images/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/normalize.css" rel="stylesheet">
     <style>
         header{
@@ -540,7 +541,7 @@
             width:100px;
             margin: auto;
             top:166px;
-            left: 280px;
+            left: 297px;
             right: 0;
             position: relative;
         }
